.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
17:16:59 **** Incremental Build of configuration Debug for project moteur_jeux_multitache ****
make -j4 all 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/app.d" -MT"src/app.o" -o "src/app.o" "../src/app.c"
../src/app.c: In function ‘instructions_MSG_PLAYER’:
../src/app.c:348:4: error: ‘played_token’ undeclared (first use in this function); did you mean ‘player_t’?
    played_token = gp4_move_left_test();
    ^~~~~~~~~~~~
    player_t
../src/app.c:348:4: note: each undeclared identifier is reported only once for each function it appears in
In file included from ../src/app.c:14:0:
../src/app.c:357:6: error: ‘instructions_to_send’ undeclared (first use in this function); did you mean ‘instructions_MSG_PLAYER’?
      instructions_to_send.params.player.player);
      ^
../src/__debug.h:24:118: note: in definition of macro ‘debug_printf’
 #define debug_printf( inLevel, format, ...) debug_pr_fn(inLevel, __FILE__ ":%s:%d: " format , __func__, __LINE__ , ##__VA_ARGS__ )
                                                                                                                      ^~~~~~~~~~~
../src/app.c:358:4: error: ‘game_status’ undeclared (first use in this function); did you mean ‘gp4_check_status’?
    game_status = gp4_check_status();
    ^~~~~~~~~~~
    gp4_check_status
../src/app.c: In function ‘applicationV2’:
../src/app.c:380:11: warning: unused variable ‘game_status’ [-Wunused-variable]
  winner_t game_status = { 0 };
           ^~~~~~~~~~~
../src/app.c:379:14: warning: unused variable ‘played_token’ [-Wunused-variable]
  pos_token_t played_token = { 0 };
              ^~~~~~~~~~~~
src/subdir.mk:39: recipe for target 'src/app.o' failed
make: *** [src/app.o] Error 1
17:18:21 **** Incremental Build of configuration Debug for project moteur_jeux_multitache ****
make -j4 all 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/app.d" -MT"src/app.o" -o "src/app.o" "../src/app.c"
../src/app.c: In function ‘instructions_MSG_PLAYER’:
../src/app.c:349:4: error: ‘played_token’ undeclared (first use in this function); did you mean ‘player_t’?
    played_token = gp4_move_left_test();
    ^~~~~~~~~~~~
    player_t
../src/app.c:349:4: note: each undeclared identifier is reported only once for each function it appears in
../src/app.c: In function ‘applicationV2’:
../src/app.c:379:11: warning: unused variable ‘game_status’ [-Wunused-variable]
  winner_t game_status = { 0 };
           ^~~~~~~~~~~
../src/app.c:378:14: warning: unused variable ‘played_token’ [-Wunused-variable]
  pos_token_t played_token = { 0 };
              ^~~~~~~~~~~~
src/subdir.mk:39: recipe for target 'src/app.o' failed
make: *** [src/app.o] Error 1
17:18:40 **** Incremental Build of configuration Debug for project moteur_jeux_multitache ****
make -j4 all 
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/app.d" -MT"src/app.o" -o "src/app.o" "../src/app.c"
../src/app.c: In function ‘applicationV2’:
../src/app.c:380:11: warning: unused variable ‘game_status’ [-Wunused-variable]
  winner_t game_status = { 0 };
           ^~~~~~~~~~~
../src/app.c:379:14: warning: unused variable ‘played_token’ [-Wunused-variable]
  pos_token_t played_token = { 0 };
              ^~~~~~~~~~~~
gcc  -o "moteur_jeux_multitache"  ./src/__debug.o ./src/__leds_control.o ./src/app.o ./src/display.o ./src/fifo.o ./src/main.o ./src/read.o ./src/timers.o   -lpthread
17:18:49 **** Incremental Build of configuration Debug for project moteur_jeux_multitache ****
make -j4 all 
make: Nothing to be done for 'all'.
